--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+a# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -18,6 +18,7 @@
 .env.test.local
 .env.production.local
 
+package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
