--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ a# See https://help.github.com/articles/ignoring-files/ for more about ignoring 
 
 # testing
 /coverage
+/testing
 
 # production
 /build
